# Kierratyslistasovellus

./: .gitignore  .pylintrc  README.md  database.sqlite  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaativuusmaarittely.md
laskarit/viikko1/: gitlog.txt  gitlog.txt.save
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/: .coverage
laskarit/viikko2/unicafe/htmlcov/: index.html  src_kassapaate_py.html  src_maksukortti_py.html  status.json
laskarit/viikko2/unicafe/src/tests/: maksukortti_test.py
src/: admin_login_view.py  admin_view.py  build.py  database_connection.py  index.py  initialize_database.py  list_view.py  register_view.py  start_view.py
src/entities/: user.py
src/repositories/: user_repository.py
src/services/: recycle_service.py
src/tests/services/: recycle_service_test.py
src/ui/: admin_login_view.py  admin_view.py  list_view.py  register_view.py  start_view.py  ui.py
