[tool.poetry]
name = "ot-harjoitustyo"
version = "0.1.0"
description = ""
authors = ["JuhahuJ <juha.lehtinen@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.17.0"
invoke = "^1.5.0"
pytest = "^6.2.3"

[tool.poetry.dev-dependencies]
pylint = "^2.7.4"
coverage = "^5.5"
pytest = "^6.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
